--- a/templates/ajax/admin/widget/controls.twig
+++ b/templates/ajax/admin/widget/controls.twig
@@ -83,7 +83,7 @@
                     {% for pictoPrototype in pictoPrototypes %}
                         <option value="{{pictoPrototype.id}}">{{ pictoPrototype.label|trans({}, 'game') }}</option>
                     {% endfor %}
-                    {% if app.environment == 'dev' %}
+                    {% if app.environment == 'dev' and is_granted('ROLE_ADMIN') %}
                         <option value="-42">[ {{ 'Alle'|trans({}, 'game') }} ]</option>
                     {% endif %}
                 </select>
