--- a/templates/ajax/game/beyond/beyond.html.twig
+++ b/templates/ajax/game/beyond/beyond.html.twig
@@ -183,7 +183,7 @@
             {% endif %}
         </div>
 
-        <div class="padded cell rw-8 rw-lg-6 rw-md-12">
+        <div class="padded cell rw-8 rw-lg-6 rw-md-12" id="beyond_desert_content">
             {% block content %}
             {% endblock %}
         </div>
