--- a/templates/ajax/game/town/nightwatch.html.twig
+++ b/templates/ajax/game/town/nightwatch.html.twig
@@ -42,36 +42,38 @@
     </div>
     {% for watcher in watchers %}
         <div class="row small {% if watcher.citizen == me %} me{% endif %}">
-            <div class="cell padded rw-3 center">{{watcher.citizen.name}}</div>
+            <div class="cell padded rw-3 center">
+                <a href="#" x-ajax-href="{{ path('town_visit', {id: watcher.citizen.id}) }}">{{watcher.citizen.name}}</a>
+            </div>
             <div class="cell padded rw-2 center">{{watcher.def}} <img src="{{ asset('build/images/icons/small_zombie.gif') }}" /></div>
             <div class="cell padded rw-6">
                 {% if watcher.citizen == me %}
                     <span>
                         10 <img alt="" src="{{ asset('build/images/icons/small_zombie.gif') }}" /><div class="tooltip">{{'Basisverteidigung'|trans({}, 'game')}}</div>
                     </span>
-                    <span>
+                    <div class="inline-block">
                         <img src="{{ asset('build/images/professions/' ~ watcher.citizen.profession.icon ~ '.gif') }}" alt="{{ watcher.citizen.profession.label|trans({},'items') }}">
                         <div class="tooltip">
                             {{ watcher.bonusDef }} <img alt="" src="{{ asset('build/images/icons/small_zombie.gif') }}" /> {{ watcher.bonusSurvival * 100 }} <img alt="" src="{{ asset('build/images/icons/small_human.gif') }}" />
                         </div>
-                    </span>
+                    </div>
                     {% for status in watcher.status %}
-                        <span>
+                        <div class="inline-block">
                             <img src="{{ asset('build/images/status/status_' ~ status.icon ~ '.gif') }}" alt="{{ status.label|trans({},'items') }}">
                             <div class="tooltip">
                                 {{ status.defImpact }} <img alt="" src="{{ asset('build/images/icons/small_zombie.gif') }}" /> {{ -status.deathImpact }} <img alt="" src="{{ asset('build/images/icons/small_human.gif') }}" />
                             </div>
-                        </span>
+                        </div>
                     {% endfor %}
                     {% for item in watcher.items %}
-                        <span>
+                        <div class="inline-block">
                             <img src="{{ asset('build/images/item/item_' ~ item.prototype.icon ~ '.gif') }}" alt="{{ item.prototype.label|trans({},'items') }}">
                             <div class="tooltip">
                                 {{ item.defImpact }} <img src="{{ asset('build/images/icons/small_zombie.gif') }}" />
                                 {% if item.prototype.nightWatchAction.name == 'nw_break' %}<div>{{'Es besteht die Chance das Objekt während des Angriffs zu zerbrechen!'|trans({}, 'game')}}</div>{% endif %}
                                 {% if item.prototype.nightWatchAction.name == 'nw_destroy' %}<div>{{'Es besteht die Chance das Objekt während des Angriffs zu verlieren!'|trans({}, 'game')}}</div>{% endif %}
                             </div>
-                        </span>
+                        </div>
                     {% endfor %}
                     {% if watcher.citizen == me %}<button x-ajax-href="{{path('town_bank')}}">{{'Wähle meine Waffen!'|trans({}, 'game')}}</button>{% endif %}
                 {% endif %}
