--- a/templates/ajax/game/map.html.twig
+++ b/templates/ajax/game/map.html.twig
@@ -209,6 +209,15 @@
                         {% set arrow_danger_level_s = arrow_danger_sense_s >= 9 ? 2 : ( arrow_danger_sense_s >= 5 ? 1 : 0 ) %}
                         {% set arrow_danger_sense_n = zone.y < map.map_y1 ? map.zones[zone.x][zone.y+1].getPersonalScoutEstimation(citizen) : 0 %}
                         {% set arrow_danger_level_n = arrow_danger_sense_n >= 9 ? 2 : ( arrow_danger_sense_n >= 5 ? 1 : 0 ) %}
+                    {% elseif scavenger_sense %}
+                        {% set arrow_danger_sense_e = 0 %}
+                        {% set arrow_danger_level_e = zone.x < map.map_x1 and (zone.x != -1 or zone.y != 0) and map.zones[zone.x+1][zone.y].discoveryStatus > constant('App\\Entity\\Zone::DiscoveryStateNone') and (map.zones[zone.x+1][zone.y].digs <= 0 and (map.zones[zone.x+1][zone.y].prototype is null or map.zones[zone.x+1][zone.y].ruinDigs <= 0)) ? 2 : 0 %}
+                        {% set arrow_danger_sense_w = 0 %}
+                        {% set arrow_danger_level_w = zone.x > map.map_x0 and (zone.x !=  1 or zone.y != 0) and map.zones[zone.x-1][zone.y].discoveryStatus > constant('App\\Entity\\Zone::DiscoveryStateNone') and (map.zones[zone.x-1][zone.y].digs <= 0 and (map.zones[zone.x-1][zone.y].prototype is null or map.zones[zone.x-1][zone.y].ruinDigs <= 0)) ? 2 : 0 %}
+                        {% set arrow_danger_sense_s = 0 %}
+                        {% set arrow_danger_level_s = zone.y > map.map_y0 and (zone.x != 0 or zone.y !=  1) and map.zones[zone.x][zone.y-1].discoveryStatus > constant('App\\Entity\\Zone::DiscoveryStateNone') and (map.zones[zone.x][zone.y-1].digs <= 0 and (map.zones[zone.x][zone.y-1].prototype is null or map.zones[zone.x][zone.y-1].ruinDigs <= 0)) ? 2 : 0 %}
+                        {% set arrow_danger_sense_n = 0 %}
+                        {% set arrow_danger_level_n = zone.y < map.map_y1 and (zone.x != 0 or zone.y != -1) and map.zones[zone.x][zone.y+1].discoveryStatus > constant('App\\Entity\\Zone::DiscoveryStateNone') and (map.zones[zone.x][zone.y+1].digs <= 0 and (map.zones[zone.x][zone.y+1].prototype is null or map.zones[zone.x][zone.y+1].ruinDigs <= 0)) ? 2 : 0 %}
                     {% else %}
                         {% set arrow_danger_sense_e = 0 %}
                         {% set arrow_danger_level_e = 0 %}
