--- a/templates/ajax/admin/users/multi_index.html.twig
+++ b/templates/ajax/admin/users/multi_index.html.twig
@@ -3,6 +3,7 @@
     {% embed "ajax/admin/users/footer.html.twig" %}{% endembed %}
     <div class="row">
         <div class="cell rw-12">
+            {% embed "ajax/admin/users/listing_tabs.html.twig" %}{% endembed %}
             <h5>{{'Multi-Account Report'|trans({}, "admin")}}</h5>
             <div class="row-table">
                 <div class="row header">
