--- a/assets/less/mixins.less
+++ b/assets/less/mixins.less
@@ -89,12 +89,12 @@ div.band {
 
 .text-wrap-all { word-break: break-all; }
 
-div.button.button-dropdown-button, div.forum-button.button-dropdown-button {
+button.button-dropdown-button, div.button.button-dropdown-button, div.forum-button.button-dropdown-button {
   position: relative; overflow: visible; display: inline-block; width: auto;
   .button-dropdown {
-    display: none; position: absolute; top: 100%; left: 0;
+    display: none; position: absolute; top: 100%; left: 0; cursor: auto;
     border: 1px solid #f0d79e; outline: 1px solid #5c2b20; background: #3c2018; padding: 5px; z-index: 10;
-    button, .button, .forum-button {width: 100%; white-space: nowrap}
+    button:not(.inline), .button:not(.inline), .forum-button:not(.inline) {width: 100%; white-space: nowrap}
   }
   &:focus .button-dropdown, & .button-dropdown:focus-within, & .button-dropdown:hover {
     display: block;
