--- a/templates/ajax/game/town/home_foreign.html.twig
+++ b/templates/ajax/game/town/home_foreign.html.twig
@@ -314,42 +314,48 @@
         <div class="padded cell rw-6 citizen-chest">
             {% if owner.alive %}
                 <h5>{{ '{citizen}s Truhe'|trans({'{citizen}': owner.name}, 'game') }}</h5>
-                {% if hidden %}
-                <p class="curtain-text">{{ 'Als du zum Fenster blickst, stellst du fest, dass ein großer Vorhang dir die Sicht versperrt. Du kannst deshalb nicht sehen, was {citizen} bei sich aufbewahrt...'|trans({'{citizen}': owner.name},'game') }}</p>
+                {% if hidden and not intruding %}
+                    <p class="curtain-text">{{ 'Als du zum Fenster blickst, stellst du fest, dass ein großer Vorhang dir die Sicht versperrt. Du kannst deshalb nicht sehen, was {citizen} bei sich aufbewahrt...'|trans({'{citizen}': owner.name},'game') }}</p>
                 {% endif %}
                 {# {% if owner.zone %}<p {% if hidden %}class="hidden with-curtains"{% endif %}>{{ '{citizen} ist ausgegangen...'|trans({'{citizen}': owner.name}, 'game') }} {% endif %}</p>#}
-                {% if chest.items|length > 0 %}
-                    <p {% if hidden %}class="hidden with-curtains"{% endif %}>{{ 'Wenn Sie aus dem Fenster schauen, können Sie die folgenden Dinge im Haus sehen:'|trans({},'game') }}</p>
+                {% if chest.items|length > 0 and (not hidden or intruding) %}
+                    {% if not intruding %}
+                        <p>{{ 'Wenn Sie aus dem Fenster schauen, können Sie die folgenden Dinge im Haus sehen:'|trans({},'game') }}</p>
+                    {% endif %}
                     {% embed "ajax/game/inventory.html.twig" with {'size': chest_size, 'items': chest.items, 'foreignChestMode': true, 'showFreeSlots': false} %}
-                        {% block class %}chest {% if owner.alive %}locked{% endif %} {% if hidden %}hidden with-curtains{% endif %}{% endblock %}
+                        {% block class %}chest {% if owner.alive and intruding <= 0 %}locked{% endif %}{% endblock %}
                         {% block title %}{% endblock %}
                     {% endembed %}
-                    <div class="help stealhelp hidden">
-                        {{'Wähle den <strong>zu stehlenden Gegenstand</strong> hier oben aus. <strong>Achtung!</strong> Es besteht die Gefahr, dass du dabei gesehen wirst. In diesem Fall musst du dich auf unangenehme Konsequenzen gefasst machen.'|trans({}, 'game')|raw}}
-                    </div>
-                {% else %}
-                    <p {% if hidden %}class="hidden with-curtains"{% endif %}>
-                    {{'Als du durch das Fenster blickst, stellst du fest, dass das Haus von {citizen} keinerlei interessante
-                    Gegenstände enthält. Ein paar Tonscherben, viel Staub und eine tote Ratte ist alles, was du erkennen kannst.
-                    Nichts, was der Mühe wert wäre.'|trans({'{citizen}': owner.name}, 'game')}}
-                    </p>
+                    {% if intruding > 0 %}
+                        <div class="help stealhelp">
+                            {{'Wähle den <strong>zu stehlenden Gegenstand</strong> hier oben aus. <strong>Achtung!</strong> Es besteht die Gefahr, dass du dabei gesehen wirst. In diesem Fall musst du dich auf unangenehme Konsequenzen gefasst machen.'|trans({}, 'game')|raw}}
+                        </div>
+                    {% endif %}
+                {% elseif (not hidden or intruding) %}
+                    <p>{{'Als du durch das Fenster blickst, stellst du fest, dass das Haus von {citizen} keinerlei interessante Gegenstände enthält. Ein paar Tonscherben, viel Staub und eine tote Ratte ist alles, was du erkennen kannst. Nichts, was der Mühe wert wäre.'|trans({'{citizen}': owner.name}, 'game')}}</p>
                 {% endif %}
-                {% if already_stolen %}
+                {% if already_stolen and not intruding %}
                     <div class="notice">{{'Du hast heute schon <strong>einen Diebstahl</strong> begangen.'|trans({},'game')|raw}}</div>
                 {% else %}
-                    <div class="hidden">
+                    {% if intruding < 0 %}
                         {% embed "ajax/game/inventory.html.twig" with {'size': rucksack_size, 'items': rucksack.items, 'sort': true} %}
                             {% block class %}rucksack{% endblock %}
                             {% block title %}{% trans from 'game' %}Mein Rucksack{% endtrans %}{% endblock %}
                         {% endembed %}
-                    </div>
+                    {% endif %}
                     {% if owner.zone and not protect %}
-                        {% if chest.items|length > 0 or hidden %}
-                            <button x-action-id="enablesteal"><img src="{{asset('build/images/icons/home.gif')}}" alt="" /> {{'Einen Gegenstand stehlen'|trans({}, 'game')}}</button>
+
+                        {% if intruding != 0 %}
+                            <button x-action-id="leave">{{'Abbrechen'|trans({}, 'global')}}</button>
+                        {% else %}
+                            {% if chest.items|length > 0 or hidden %}
+                                <button x-action-id="enablesteal"><img src="{{asset('build/images/icons/home.gif')}}" alt="" /> {{'Einen Gegenstand stehlen'|trans({}, 'game')}}</button>
+                            {% endif %}
+                            {% if not owner.town.chaos %}
+                                <button x-action-id="enablesneak">{{'Einen Gegenstand hinterlassen'|trans({}, 'game')}}</button>
+                            {% endif %}
                         {% endif %}
-                        {% if not owner.town.chaos %}
-                            <button x-action-id="enablesneak">{{'Einen Gegenstand hinterlassen'|trans({}, 'game')}}</button>
-                        {% endif %}
+
                     {% endif %}
 
                     {% if not owner.zone and not hidden %}
@@ -468,6 +474,21 @@
                         } );
                 });
             {% endif %}
+
+            {% if intruding > 0 %}
+                handleItems(
+                    document.querySelectorAll('.chest>.item:not(.locked)[x-item-id]'),
+                    '{{ path('town_visit_item_controller', {id: owner.id}) }}',
+                    'up', '{{ path('town_visit', {id: owner.id}) }}'
+                );
+            {% elseif (intruding < 0) %}
+                handleItems(
+                    document.querySelectorAll('.rucksack>.item:not(.locked)[x-item-id]'),
+                    '{{ path('town_visit_item_controller', {id: owner.id}) }}',
+                    'down', '{{ path('town_visit', {id: owner.id}) }}'
+                );
+            {% endif %}
+
             $.html.addEventListenerAll('button[x-action-id]', 'click', function(ev){
                 let msg = "";
                 if (ev.target.getAttribute('x-action-id') == "enablesteal") {
@@ -475,11 +496,16 @@
                 } else if (ev.target.getAttribute('x-action-id') == "enablesneak") {
                     msg = "{{ 'Bist du sicher, dass du hier einbrechen und einen Gegenstand hinterlassen willst?'|trans({},'game')|e('js') }}";
                 }
-                if (!confirm(msg))
+                if (msg && !confirm(msg))
                     return;
-                ev.target.classList.add('hidden');
+
                 switch(ev.target.getAttribute('x-action-id')){
-                    case "enablesteal":
+                    case "enablesteal": case "enablesneak": case "leave":
+
+                        let action = ev.target.getAttribute('x-action-id') === 'leave' ? 0 : ( ev.target.getAttribute('x-action-id') === 'enablesteal' ? 1 : -1 );
+                        $.ajax.easySend('{{ path('town_visit_intrusion_controller', {id: owner.id}) }}', {action: action}, () => $.ajax.load(null, '{{ path('town_visit', {id: owner.id}) }}'))
+                        break;
+                        /*
                         {% if chest.items|length > 0 %}
                         document.querySelector("ul.chest.locked").classList.remove('locked');
                         document.querySelector('div.stealhelp').classList.remove('hidden');
@@ -497,15 +523,17 @@
                             document.querySelectorAll('.chest>.item:not(.locked)[x-item-id]'),
                             '{{ path('town_visit_item_controller', {id: owner.id}) }}',
                             'up', '{{ path('town_visit', {id: owner.id}) }}'
-                        );
+                        );*/
                         break;
-                    case "enablesneak":
+                    //case "enablesneak":
+                        /*
                         document.querySelector(".citizen-chest ul.rucksack").parentElement.classList.remove('hidden');
                         handleItems(
                             document.querySelectorAll('.rucksack>.item:not(.locked)[x-item-id]'),
                             '{{ path('town_visit_item_controller', {id: owner.id}) }}',
                             'down', '{{ path('town_visit', {id: owner.id}) }}'
                         );
+                        */
                         break;
                 }
             });
