Updated OpenCollective link (1)

--- a/templates/ajax/ghost/donate.html.twig
+++ b/templates/ajax/ghost/donate.html.twig
@@ -104,7 +104,7 @@
 {% block js %}
     <script>
         document.getElementById('donate_btn').addEventListener('click', function() {
-            window.open('https://opencollective.com/eternal-twin','_blank');
+            window.open('https://opencollective.com/eternaltwin','_blank');
         });
     </script>
 {% endblock %}
