--- a/templates/ajax/admin/towns/explorer.html.twig
+++ b/templates/ajax/admin/towns/explorer.html.twig
@@ -691,6 +691,8 @@
         {{ profession_control_js('input[x-target="status"]:checked', path('admin_modify_profession', {id: town.id}), path('admin_town_explorer', {id: town.id, tab: "citizens"})) }}
     {% endif %}
     <script>
+        {% embed "scripts/log.js.twig" %}{% endembed %}
+
         (function() {
 
             let fun_api_call = function(api_url, elem) {
@@ -729,53 +731,6 @@
                 document.getElementById("forum-content").innerHTML = "";
                 $.ajax.no_history().load( document.getElementById('forum-content'), '{{ path('admin_pm_editor_controller', {'type': 'global'}) }}', false )
             });
-
-            let log_boxes = document.querySelectorAll('.log-container');
-            for (let i = 0; i < log_boxes.length; i++) {
-                let log = log_boxes[i].querySelector( '.log' );
-
-                const has_preloaded_content = log.getAttribute('x-log-default-provided') == '1';
-                const url = log.getAttribute('x-log-source');
-                let content_box = log.querySelectorAll('.log-content');
-
-                const fun_refresh = function(d,bg) {
-                    if (bg) $.ajax.background().load( content_box[0], url, false, {day: d, town: {{town.id}}} );
-                    else $.ajax.load( content_box[0], url, false, {day: d, town: {{town.id}}} )
-                };
-
-                let refresh_button = log.querySelector('.log-complete-link');
-                if (refresh_button) refresh_button.addEventListener('click', function() {
-                    let spinner = log.querySelector('.log-spinner');
-                    refresh_button.classList.add('hidden');
-                    if (spinner) spinner.classList.remove('hidden');
-
-                    fun_refresh(-1,true);
-                });
-
-                if (!has_preloaded_content) fun_refresh(-1,true);
-
-                let control_tab = log_boxes[i].querySelector( '.log-day-select .tab' );
-                if (control_tab) {
-                    const min = parseInt(control_tab.getAttribute( 'x-page-min' ));
-                    const max = parseInt(control_tab.getAttribute( 'x-page-max' ));
-                    let   cur = parseInt(control_tab.getAttribute( 'x-page-current' ));
-
-                    let control_fwd = control_tab.querySelector( 'div.control:first-child' );
-                    let control_bwd = control_tab.querySelector( 'div.control:last-child' );
-                    let label       = control_tab.querySelector( 'span' );
-
-                    const fun_adjust = function(dif) {
-                        if ((dif > 0 && cur <= (max-dif)) || (dif < 0 && cur >= (min-dif))) {
-                            cur += dif;
-                            label.innerText = ('' + cur);
-                            fun_refresh(cur,false);
-                        }
-                    };
-
-                    control_fwd.addEventListener('click', function() { fun_adjust( 1) });
-                    control_bwd.addEventListener('click', function() { fun_adjust(-1) });
-                }
-            }
 
             {% if is_granted("ROLE_ADMIN") %}
 
