--- a/templates/scripts/errors/forum.txt.twig
+++ b/templates/scripts/errors/forum.txt.twig
@@ -6,3 +6,4 @@
 {{ constant('App\\Controller\\Messages\\MessageController::ErrorGPMMemberLimitHit') }}  : '{{'Du kannst keine weiteren Spieler zu dieser Nachricht hinzufügen.'|trans({},'global')|e('js')}}',
 {{ constant('App\\Controller\\Messages\\MessageController::ErrorGPMThreadLimitHit') }}  : '{{'Spamschutz: Du hast heute bereits eine große Anzahl an Spielern kontaktiert; du musst eine Weile warten, bevor du eine neue Nachricht erstellen kannst.'|trans({},'global')|e('js')}}',
 {{ constant('App\\Controller\\Messages\\MessageController::ErrorPMItemChaosOut') }} : '{{'Es ist nicht erlaubt, im Chaos-Modus einen Gegenstand an einen Bürger zu senden, der sich außerhalb der Stadt befindet.'|trans({},'global')|e('js')}}',
+{{ constant('App\\Controller\\Messages\\MessageController::ErrorPostTitleTextMissing') }} : '{{'Deine Nachricht benötigt einen Titel sowie Inhalt.'|trans({},'global')|e('js')}}',
