--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -553,9 +553,9 @@ ul.subscriptions {
     }
 
     .count {
-      background:#593223;
+      background:#593223; overflow: hidden; white-space: nowrap;
       .nbPost { font-size: 1.3em; font-weight: bold; line-height: 0.9em; }
-      .author { word-wrap: break-word; font-size: 0.75em; }
+      .author { word-wrap: break-word; font-size: 0.75em; overflow: hidden; text-overflow: ellipsis; }
     }
 
 
